# Gecko_demos

./: .gitignore  README.md
Demos/001_Breakout/: CMakeLists.txt  README.md
Demos/001_Breakout/build_release/: Breakout  CMakeCache.txt  Makefile  cmake_install.cmake
Demos/001_Breakout/build_release/gecko_shaders/Breakout/: fillCircle.frag.spv  fillCircle.frag.spv.inc  fillRect.frag.spv  fillRect.frag.spv.inc  shaders.h  strokeCircle.frag.spv  strokeCircle.frag.spv.inc  strokeRect.frag.spv  strokeRect.frag.spv.inc  vertex2D.vert.spv  vertex2D.vert.spv.inc
Demos/001_Breakout/cmake/: FetchGecko.cmake
Demos/001_Breakout/shaders/: _common.hlsl  fillCircle.frag.hlsl  fillRect.frag.hlsl  fullscreen.frag.hlsl  fullscreen.vert.hlsl  plasma.comp.hlsl  rect.vert.hlsl  strokeCircle.frag.hlsl  strokeRect.frag.hlsl  triangle.frag.hlsl  triangle.vert.hlsl  vertex2D.vert.hlsl
Demos/001_Breakout/src/: App.cpp  App.h  Camera.cpp  Camera.h  Common.h  Entity.cpp  Entity.h  Renderer.cpp  Renderer.h  Scene.h  main.cpp  overwrite_new.cpp
Demos/001_Breakout/src/Scenes/: GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h
